--- a/claims/templates/claims/agentleads.html
+++ b/claims/templates/claims/agentleads.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-  <!--<section class="text-gray-600 body-font">
+<section class="text-gray-600 body-font">
         <div class="container px-5 py-24 mx-auto flex flex-wrap">
           <div class="w-full  mb-6 py-6 flex justify-between items-center border-b border-gray-200">
               <div>
@@ -17,7 +16,12 @@
             <div class="p-4 lg:w-1/2 md:w-full">
                 <div class="flex border-2 rounded-lg border-gray-200 border-opacity-50 p-8 sm:flex-row flex-col">
                     <div class="w-16 h-16 sm:mr-8 sm:mb-0 mb-4 inline-flex items-center justify-center rounded-full bg-blue-100 text-blue-500 flex-shrink-0">
-                      <img src="{{ d.image.url }}">
+                      {% if d.user.socialauth %}
+                        <img src="{{ d.user.socialaccount_set.all.0.get_avatar_url}}">
+                      {% else %}
+                        <img src="{{ d.user.pic.url}}">
+
+                      {% endif %}
                     </div>
                     <div class="flex-grow">
                       <h2 class="text-gray-900 text-lg title-font font-medium mb-3">
@@ -37,47 +41,6 @@
             {% endfor %}
           </div>
         </div>
-      </section> -->
-
-      <content><section class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-4 py-12">
-        <div class="w-full text-center pb-8">
-          
-        
-            <h1 class="font-bold text-3xl md:text-4xl lg:text-5xl font-heading text-gray-900 pb-2">
-                Claims
-            </h1>
-            <button class="px-4 py-2 rounded-md text-sm font-medium border-0 mt-5 focus:outline-none focus:ring transition text-blue-600 bg-blue-50 hover:text-blue-800 hover:bg-blue-100 active:bg-blue-200 focus:ring-blue-300" type="button">
-            <a href = "{% url 'claims:create' %}">create a new claim</a>
-            </button>
-          
-            
-        </div>
-          
-
-
-        <div class="w-full grid grid-cols-1 md:grid-cols-2 gap-6">
-            {% for d in data %}
-            <div class="bg-white rounded-lg p-6">
-                <div class="flex items-center space-x-6 mb-4">
-                    <img class="h-28 w-28 object-cover object-center rounded-full" 
-                    src="{{ d.image.url }}" alt="photo">
-                    <div>
-                        <p class="text-xl text-gray-700 font-normal mb-1"><a href="{% url 'claims:detail' d.pk %}">{{ d.first_name }} {{ d.last_name }}</a></p>
-                        <p class="text-base text-blue-600 font-normal">{{d.occupation}}</p>
-                    </div>
-                </div>
-                <div>
-                    <p class="text-gray-400 leading-loose font-normal text-base">{{d.describtion| truncatechars:50}}</p>
-                   
-                </div>
-              
-            </div>
-            {% endfor %}
-            
-          </div>
-        </div>
-    </section></content>
-
 
 
 {% endblock content %}
